# Sistema-de-cadastro

./: Clientes.db  LICENSE  README.md  banco.py  funcoes.py  interface.py  pyproject.toml  requirements.txt  tabela.py
